@@ -16,8 +16,7 @@ layer at (0,0) size 800x130
           text run at (14,0) width 770: "The black box's top should be aligned with the end of the last line in this parargaph and its left side should begin right after"
           text run at (629,18) width 8: ". "
           text run at (637,18) width 147: "the end of this sentence"
-        RenderText {TEXT} at (625,18) size 4x18
-          text run at (625,18) width 4: " "
+        RenderText {TEXT} at (0,0) size 0x0
 layer at (397,96) size 240x340
   RenderBlock (positioned) {SPAN} at (397,96) size 240x340 [border: (20px solid #000000)]
     RenderText {TEXT} at (0,0) size 0x0
