@@ -11,8 +11,7 @@ layer at (0,0) size 800x70
         text run at (0,18) width 293: "checking to make sure overflow is done using "
         text run at (293,18) width 446: "a containing block model, and that a fixed positioned element inside an"
         text run at (0,36) width 353: "absolute positioned element is not considered overflow. "
-      RenderText {TEXT} at (353,36) size 4x18
-        text run at (353,36) width 4: " "
+      RenderText {TEXT} at (0,0) size 0x0
 layer at (8,62) size 100x100
   RenderBlock (positioned) {DIV} at (8,62) size 100x100
     RenderText {TEXT} at (0,0) size 0x0
